<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.resys.hdes</groupId>
  <artifactId>hdes</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>hdes</name>
  <organization>
    <name>Copyright 2020 ReSys OÜ</name>
  </organization>
  <inceptionYear>2020</inceptionYear>
  <description>HDES language for defining decision tables, flows, manual and service tasks</description>
  <url>http://github.com/the-wrench-io/hdes</url>

  <!-- <parent> <groupId>com.jcabi</groupId> <artifactId>parent</artifactId> <version>0.49.5</version> </parent> -->
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Olev Mutso</name>
      <email>olev.mutso@gmail.com</email>
      <organization>ReSys OÜ</organization>
      <organizationUrl>http://www.resys.io</organizationUrl>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:git://github.com/the-wrench-io/hdes.git</connection>
    <developerConnection>scm:git:ssh://github.com:the-wrench-io/hdes.git</developerConnection>
    <url>http://github.com/the-wrench-io/hdes/tree/master</url>
  </scm>

  <distributionManagement>
    <repository>
      <id>oss.sonatype.org</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>oss.sonatype.org</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <modules>
    <module>hdes-ast</module>
    <module>hdes-compiler</module>
    
    <module>hdes-storage</module>
    <module>hdes-ui</module>

    <!-- <module>hdes-maven-plugin-test</module> <module>hdes-object-repo-mongodb</module> -->

    <module>hdes-dev-app</module>
    <module>hdes-maven-plugin</module>
    <module>hdes-dev-app-starter</module>
  </modules>

  <properties>
    <jdk.version>11</jdk.version>
    <maven.compiler.target>${jdk.version}</maven.compiler.target>
    <maven.compiler.source>${jdk.version}</maven.compiler.source>
    <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>

    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <quarkus.version>1.4.1.Final</quarkus.version>
    <logback.version>1.2.3</logback.version>
    <slf4j.version>1.7.24</slf4j.version>
    <jackson.version>2.10.2</jackson.version>
    <immutables.version>2.8.2</immutables.version>

    <findbugs.version>3.0.2</findbugs.version>

    <junit5.version>5.6.0</junit5.version>
    <jsonassert.version>1.5.0</jsonassert.version>
    <flapdoodle.version>2.2.0</flapdoodle.version>

    <antlr.version>4.8-1</antlr.version>

    <mongodb.version>3.12.0</mongodb.version>
    <javapoet.version>1.12.1</javapoet.version>

    <commons-io.version>2.5</commons-io.version>
    <commons-csv.version>1.5</commons-csv.version>
    <commons-codec.version>1.13</commons-codec.version>
    <commons-lang.version>3.9</commons-lang.version>

    <node.version>v10.16.3</node.version>
    <npm.version>6.11.3</npm.version>
    <frontend-maven-plugin.version>1.8.0</frontend-maven-plugin.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>

      <!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-source-plugin</artifactId> <executions> <execution> <id>attach-sources</id> <goals> <goal>jar-no-fork</goal> </goals> </execution> </executions> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-javadoc-plugin</artifactId> 
        <executions> <execution> <id>attach-javadocs</id> <goals> <goal>jar</goal> </goals> </execution> </executions> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-gpg-plugin</artifactId> <executions> <execution> <id>sign-artifacts</id> <phase>verify</phase> <goals> <goal>sign</goal> 
        </goals> </execution> </executions> </plugin> -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>1.10</version>
        <configuration>
          <licenseName>apache_v2</licenseName>
          <excludes>
            <exclude>**/*.json</exclude>
            <exclude>**/*.yaml</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <id>first</id>
            <goals>
              <goal>update-file-header</goal>
            </goals>
            <phase>process-sources</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-plugin-plugin</artifactId>
          <version>3.6.0</version>
        </plugin>
        <plugin>
          <groupId>org.antlr</groupId>
          <artifactId>antlr4-maven-plugin</artifactId>
          <version>${antlr.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>antlr4</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>

                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <versionRange>[1.4,)</versionRange>
                    <goals>
                      <goal>create-timestamp</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.jboss.jandex</groupId>
                    <artifactId>jandex-maven-plugin</artifactId>
                    <versionRange>[1.0.7,)</versionRange>
                    <goals>
                      <goal>jandex</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>

                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <versionRange>[3.2,)</versionRange>
                    <goals>
                      <goal>descriptor</goal>
                      <goal>helpmojo</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-runtime</artifactId>
        <version>${antlr.version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>${findbugs.version}</version>
      </dependency>

      <dependency>
        <groupId>com.squareup</groupId>
        <artifactId>javapoet</artifactId>
        <version>${javapoet.version}</version>
      </dependency>

      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-core-deployment</artifactId>
        <version>${quarkus.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-vertx-http-deployment</artifactId>
        <version>${quarkus.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-arc-deployment</artifactId>
        <version>${quarkus.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-smallrye-openapi-common-deployment</artifactId>
        <version>${quarkus.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-junit5-internal</artifactId>
        <scope>test</scope>
        <version>${quarkus.version}</version>
      </dependency>

      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>${logback.version}</version>
        <scope>runtime</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.dataformat</groupId>
        <artifactId>jackson-dataformat-yaml</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>org.immutables</groupId>
        <artifactId>value</artifactId>
        <version>${immutables.version}</version>
        <scope>provided</scope>
      </dependency>

      <!-- DB-s -->
      <dependency>
        <groupId>org.mongodb</groupId>
        <artifactId>mongodb-driver-sync</artifactId>
        <version>${mongodb.version}</version>
      </dependency>


      <!-- Commons -->
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-csv</artifactId>
        <version>${commons-csv.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>${commons-codec.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-collections4</artifactId>
        <version>${commons-collections.version}</version>
      </dependency>

      <!-- Components -->
      <dependency>
        <groupId>io.resys.hdes</groupId>
        <artifactId>hdes-ast</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.resys.hdes</groupId>
        <artifactId>hdes-compiler</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.resys.hdes</groupId>
        <artifactId>hdes-maven-plugin</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.resys.hdes</groupId>
        <artifactId>hdes-dev-app</artifactId>
        <version>${project.version}</version>
      </dependency>
      
      <dependency>
        <groupId>io.resys.hdes</groupId>
        <artifactId>hdes-storage</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.resys.hdes</groupId>
        <artifactId>hdes-object-repo</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.resys.hdes</groupId>
        <artifactId>hdes-object-repo-mongodb</artifactId>
        <version>${project.version}</version>
      </dependency>
      
      <dependency>
        <groupId>io.resys.hdes</groupId>
        <artifactId>hdes-ui</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.resys.hdes</groupId>
        <artifactId>hdes-ui-frontend</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.resys.hdes</groupId>
        <artifactId>hdes-ui-backend</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.resys.hdes</groupId>
        <artifactId>hdes-ui-quarkus</artifactId>
        <version>${project.version}</version>
      </dependency>


      <!-- Testing -->
      <dependency>
        <groupId>de.flapdoodle.embed</groupId>
        <artifactId>de.flapdoodle.embed.mongo</artifactId>
        <scope>test</scope>
        <version>${flapdoodle.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <scope>test</scope>
        <version>${junit5.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <scope>test</scope>
        <version>${junit5.version}</version>
      </dependency>
      <dependency>
        <groupId>org.skyscreamer</groupId>
        <artifactId>jsonassert</artifactId>
        <scope>test</scope>
        <version>${jsonassert.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

</project>
